--- a/package.json
+++ b/package.json
@@ -4,25 +4,50 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/serverr.ts"
+    "start:server": "nodemon ./dist/server.js",
+    "build": "tsc -p .",
+    "start:watcher": "npm run build -- -w"
+  },
+  "prettier": {
+    "printWidth": 120
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "axios": "^0.21.1",
-    "cookie-parser": "^1.4.5",
+    "@prisma/client": "^5.10.2",
+    "@types/connect-livereload": "^0.6.3",
+    "@types/livereload": "^0.9.5",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.14.1",
+    "connect-livereload": "^0.6.1",
+    "connect-redis": "^5.1.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "ioredis": "^4.23.0",
+    "jsxte": "^3.3.0",
+    "livereload": "^0.9.3",
+    "morgan": "^1.10.0",
     "nanoid": "^3.1.20",
     "node-fetch": "^2.6.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.19",
-    "@types/node-fetch": "^2.5.7"
+    "@types/express-session": "^1.17.3",
+    "@types/node": "^14.18.63",
+    "@types/node-fetch": "^2.5.7",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
+    "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^5.3.3"
   }
 }
