--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/connect-flash": "^0.0.40",
     "@types/connect-livereload": "^0.6.3",
     "@types/livereload": "^0.9.5",
     "axios": "^1.6.7",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.14.1",
     "connect-livereload": "^0.6.1",
-    "connect-redis": "^5.1.0",
-    "dotenv": "^8.2.0",
+    "connect-redis": "^5.2.0",
+    "dotenv": "^8.6.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-session": "^1.18.0",
     "ioredis": "^4.23.0",
     "jsxte": "^3.3.0",
     "livereload": "^0.9.3",
@@ -36,10 +37,10 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "redis": "^3.0.2"
+    "redis": "^3.1.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.18.63",
     "@types/node-fetch": "^2.5.7",
