--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.1.20",
     "node-fetch": "^2.6.1",
+    "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "redis": "^3.0.2"
