first week tasks

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@types/connect-livereload": "^0.6.3",
     "@types/livereload": "^0.9.5",
     "axios": "^1.6.7",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.14.1",
     "connect-livereload": "^0.6.1",
     "connect-redis": "^5.1.0",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -39,6 +40,7 @@
     "redis": "^3.0.2"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.40",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.18.63",
