--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/connect-livereload": "^0.6.3",
     "@types/livereload": "^0.9.5",
     "axios": "^1.6.7",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.14.1",
     "connect-livereload": "^0.6.1",
